# GC-Constrained-PIHMC

./: CMakeLists.txt  README.md
examples/: INPUT  STRU
examples/CHMC/C2H3/: INPUT
examples/CHMC/C3H4O2_ABACUS/: INPUT
examples/CHMC/C3H4O2_ABACUS/C3H4O2/: INPUT  STRU
examples/CHMC/C3H4O2_PI/: BEADS  INPUT  STRU
examples/CHMC/C3H4O2_VASP/: INPUT
examples/CHMC/C3H4O2_VASP/C3H4O2/: INCAR
examples/CHMC/LJ/: INPUT  STRU
examples/CMC/C2H3/: INPUT
examples/GCCHMC/PtHH2O/: INPUT
examples/GCHMC/PtHH2O/: INPUT  STRU
examples/HMC/C2H3/: INPUT
examples/HMC/C2H3_model_devi/: INPUT
examples/MD/C2H3/: INPUT  STRU
include/: HMC_NVT.h  HMC_NVT_RC.h  HMC_muVT.h  MC_NVT_RC.h  MD_NVE.h  NSphere.h  PI_HMC_NVT.h  PI_HMC_muVT.h  PI_MC_NVT.h  atom.h  box.h  cell.h  const.h  constant.h  dof.h  elec_num.h  element.h  first_principle.h  gen_func.h  hard_bdry.h  hmc.h  input.h  mat3.h  matrix3.h  mc.h  md.h  md_nve.h  ml_pot.h  ml_potential.h  model_devi.h  output.h  pimc.h  pot.h  potential.h  preset.h  rand.h  rigid_body.h  run_time.h  rxn_coord.h  rxn_coord_diff.h  (+9 more)
source/: HMC_NVT.cpp  HMC_NVT_RC.cpp  HMC_muVT.cpp  MC_NVT_RC.cpp  MD_NVE.cpp  NSphere.cpp  PI_HMC_NVT.cpp  PI_HMC_muVT.cpp  PI_MC_NVT.cpp  atom.cpp  box.cpp  cell.cpp  constant.cpp  dof.cpp  elec_num.cpp  element.cpp  first_principle.cpp  gen_func.cpp  input.cpp  main.cpp  matrix3.cpp  md_nve.cpp  ml_pot.cpp  ml_potential.cpp  model_devi.cpp  output.cpp  pimc.cpp  potential.cpp  rigid_body.cpp  rxn_coord_diff.cpp  rxn_coord_diff_asym.cpp  rxn_coord_dist.cpp  simu.cpp  virt_atom.cpp  wall.cpp
